--- a/WPF/Tablet/Views/AddBegginingDateTime.xaml
+++ b/WPF/Tablet/Views/AddBegginingDateTime.xaml
@@ -7,12 +7,17 @@
         xmlns:cmd="clr-namespace:BookingApp.WPF.Utils.Commands"
         xmlns:local="clr-namespace:BookingApp.WPF.Tablet.Views"
         mc:Ignorable="d"
-               Title="AddBegginingDateTimeWindow" Height="150" Width="350" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+               Title="AddBegginingDateTimeWindow" Height="200" Width="350" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Window.CommandBindings>
         <CommandBinding Command="cmd:RoutedCommands.Cancel" CanExecute="Cancel_CanExecute" Executed="Cancel_Executed"/>
         <CommandBinding Command="cmd:RoutedCommands.Confirm" CanExecute="Add_CanExecute" Executed="Add_Executed"/>
     </Window.CommandBindings>
-    <Grid>
+    <Window.Resources>
+        <ResourceDictionary Source="../TabletSTyles.xaml">
+            
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid Style="{StaticResource GridBackground}">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
@@ -22,15 +27,15 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.ColumnSpan="2"  Content="Date:" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="18"/>
+        <Label Grid.Row="0" Grid.ColumnSpan="2"  Content="Date:" Style="{StaticResource WindowLabel}"/>
         <DatePicker x:Name="datePicker" Grid.Row="0" Grid.Column="3" DisplayDateStart="{x:Static sys:DateTime.Today}" Width="200" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5" FontSize="18" SelectedDateChanged="datePicker_SelectedDateChanged"/>
 
 
-        <Label Grid.Row="1" Grid.ColumnSpan="2" Content="Time:" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="18"/>
+        <Label Grid.Row="1" Grid.ColumnSpan="2" Content="Time:" Style="{StaticResource WindowLabel}"/>
         <TextBox Grid.Row="1" Margin="5,0,5,0" FontSize="18" VerticalAlignment="Center" Text="{Binding Time}" Grid.Column="1"/>
 
 
-        <Button x:Name="addButton" Content="Add" Command="cmd:RoutedCommands.Confirm" Margin="20,5,20,5" FontSize="18" Grid.Row="3" Grid.Column="1"/>
-        <Button x:Name="cancelButton" Content="Cancel" Command="cmd:RoutedCommands.Cancel" Margin="20,5,20,5" FontSize="18" Grid.Row="3" Grid.Column="0"/>
+        <Button x:Name="addButton" Content="Add" Command="cmd:RoutedCommands.Confirm" Style="{StaticResource WindowButton}" Grid.Row="3" Grid.Column="1"/>
+        <Button x:Name="cancelButton" Content="Cancel" Command="cmd:RoutedCommands.Cancel" Style="{StaticResource WindowButton}" Grid.Row="3" Grid.Column="0"/>
     </Grid>
 </Window>
