--- a/WPF/Tablet/Views/FinishedTourPage.xaml
+++ b/WPF/Tablet/Views/FinishedTourPage.xaml
@@ -14,7 +14,11 @@
         <CommandBinding x:Name="Stats" Command="cmd:RoutedCommands.Stats" CanExecute="Stats_CanExecute" Executed="Stats_Executed"/>
         <CommandBinding x:Name="Reviews" Command="cmd:RoutedCommands.Reviews" CanExecute="Reviews_CanExecute" Executed="Reviews_Executed"/>
     </Page.CommandBindings>
-    <Grid Margin="0,10,0,10" Background="White">
+    <Page.Resources>
+        <ResourceDictionary Source="../TabletStyles.xaml">
+        </ResourceDictionary>
+    </Page.Resources>
+    <Grid Margin="0,10,0,10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -51,23 +55,67 @@
             <TextBlock Grid.Row="5" Grid.Column="0" Margin="10" Text="{Binding tourDTO.Beggining, StringFormat=Start: {0}}" FontSize="18"/>
             <TextBlock Grid.Row="6" Grid.Column="0" Margin="10" Text="{Binding tourDTO.End, StringFormat=End: {0}}" FontSize="18"/>
 
-            <Button x:Name="statsButton" Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Command="cmd:RoutedCommands.Stats">
+            <Button x:Name="statsButton" Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" Command="cmd:RoutedCommands.Stats">
+                <Button.Style>
+                    <Style>
+                        <Setter Property="Button.Background" Value="{StaticResource Green2}"/>
+                        <Setter Property="Button.HorizontalAlignment" Value="Left"/>
+                        <Setter Property="Button.VerticalAlignment" Value="Center"/>
+                        <Setter Property="Button.Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Background="{TemplateBinding Background}" BorderBrush="Transparent" BorderThickness="0">
+                                        <ContentPresenter Margin="{TemplateBinding Button.Padding}"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="{StaticResource Beige}"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
                 <StackPanel Orientation="Vertical" Margin="10">
                     <Image Source="{StaticResource StatsIcon}" Width="50" Height="50" />
-                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold">Stats</Label>
+                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" Margin="0" FontWeight="Bold">Stats</Label>
                 </StackPanel>
             </Button>
             
-            <Button x:Name="reviewsButton" Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" Margin="0,0,10,0" HorizontalAlignment="Right" Background="{x:Null}" BorderBrush="{x:Null}" Command="cmd:RoutedCommands.Reviews">
+            <Button x:Name="reviewsButton" Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" Command="cmd:RoutedCommands.Reviews">
+                <Button.Style>
+                    <Style>
+                        <Setter Property="Button.Background" Value="{StaticResource Green2}"/>
+                        <Setter Property="Button.HorizontalAlignment" Value="Right"/>
+                        <Setter Property="Button.VerticalAlignment" Value="Center"/>
+                        <Setter Property="Button.Padding" Value="0,10,0,12"/>
+                        <Setter Property="Button.Margin" Value="0,0,10,0"/>
+                        <Setter Property="Button.Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Background="{TemplateBinding Background}" BorderBrush="Transparent" BorderThickness="0">
+                                        <ContentPresenter Margin="{TemplateBinding Button.Padding}"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="{StaticResource Beige}"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
                 <StackPanel Orientation="Vertical">
                     <Image Source="{StaticResource ReviewsIcon}" Width="50" Height="50" />
-                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold">Reviews</Label>
+                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" Margin="0" FontWeight="Bold">Reviews</Label>
                 </StackPanel>
             </Button>
         </Grid>
         <DockPanel Grid.Row="1" Grid.Column="0">
-            <Label DockPanel.Dock="Top" Content="Description:" Margin="5" FontSize="18"/>
-            <Border BorderBrush="Black" BorderThickness="1"  Margin="10">
+            <Label DockPanel.Dock="Top" Content="Description:" Style="{StaticResource PageLabel}"/>
+            <Border BorderBrush="Black" BorderThickness="1" Background="{StaticResource Beige}" Padding="5" Margin="10,0,10,10">
                 <ScrollViewer>
                     <TextBlock TextWrapping="Wrap" ScrollViewer.CanContentScroll="True" Text="{Binding tourDTO.Description}" FontSize="18"/>
                 </ScrollViewer>
@@ -79,8 +127,8 @@
                 <RowDefinition />
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Label Grid.Row="0" Content="Keypoints:" Margin="5" FontSize="18"/>
-            <Grid Grid.Row="1" Background="White">
+            <Label Grid.Row="0" Content="Keypoints:" HorizontalAlignment="Left" Margin="5" FontSize="18"/>
+            <Grid Grid.Row="1" >
                 <DataGrid x:Name="dataGrid" ItemsSource="{Binding pointOfInterestDTOs}" IsReadOnly="True" 
           SelectionMode="Single" AutoGenerateColumns="False">
                     <DataGrid.Columns>
@@ -91,6 +139,6 @@
                 </DataGrid>
             </Grid>
         </Grid>
-        <Button Grid.ColumnSpan="2" Grid.Row="2" x:Name="closeButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Close" Command="cmd:RoutedCommands.Cancel"/>
+        <Button Grid.ColumnSpan="2" Grid.Row="2" x:Name="closeButton" Style="{StaticResource BigButtons}" Content="Close" Command="cmd:RoutedCommands.Cancel"/>
     </Grid>
 </Page>
