--- a/WPF/Tablet/Views/MenuBarButtonPage.xaml
+++ b/WPF/Tablet/Views/MenuBarButtonPage.xaml
@@ -11,9 +11,14 @@
     <Page.CommandBindings>
         <CommandBinding x:Name="MenuBar" Command="cmd:RoutedCommands.Confirm" CanExecute="MenuBar_CanExecute" Executed="MenuBar_Executed"/>
     </Page.CommandBindings>
+    <Page.Resources>
+        <ResourceDictionary Source="../TabletStyles.xaml">
+            
+        </ResourceDictionary>
+    </Page.Resources>
     <Grid>
-        <Button  x:Name="menuButton" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="40" Margin="0,0,0,0" Command="cmd:RoutedCommands.Confirm" Background="Cyan" BorderBrush="#FF190303" Foreground="{x:Null}">
-            <Image Source="{StaticResource HamburgerBarIcon}" />
+        <Button  x:Name="menuButton" Style="{StaticResource HamburgerButton}" Height="40" Width="40" Command="cmd:RoutedCommands.Confirm"  BorderBrush="Black" Foreground="{x:Null}">
+            <Image Source="{StaticResource HamburgerBarIcon}"/>
         </Button>
 
     </Grid>
