--- a/WPF/Tablet/Views/PassengerWindow.xaml
+++ b/WPF/Tablet/Views/PassengerWindow.xaml
@@ -11,7 +11,12 @@
         <CommandBinding x:Name="Cancel" Command="cmd:RoutedCommands.Cancel" CanExecute="Cancel_CanExecute" Executed="Cancel_Executed"/>
         <CommandBinding x:Name="Confirm" Command="cmd:RoutedCommands.Confirm" CanExecute="Confirm_CanExecute" Executed="Confirm_Executed"/>
     </Window.CommandBindings>
-    <Grid>
+    <Window.Resources>
+        <ResourceDictionary Source="../TabletStyles.xaml">
+            
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid Background="{StaticResource Beige}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -35,7 +40,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="cancelButton" Content="Cancel" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5" Margin="10" Command="cmd:RoutedCommands.Cancel"/>
-        <Button x:Name="confirmButton" Content="Confirm" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5" Margin="10" Command="cmd:RoutedCommands.Confirm"/>
+        <Button x:Name="cancelButton" Content="Cancel" Grid.Column="0" Grid.Row="1" Style="{StaticResource BasicButton}" Command="cmd:RoutedCommands.Cancel"/>
+        <Button x:Name="confirmButton" Content="Confirm" Grid.Column="2" Grid.Row="1" Style="{StaticResource BasicButton}" Command="cmd:RoutedCommands.Confirm"/>
     </Grid>
 </Window>
