--- a/WPF/Tablet/Views/TourReviewsPage.xaml
+++ b/WPF/Tablet/Views/TourReviewsPage.xaml
@@ -11,13 +11,18 @@
     <Page.CommandBindings>
         <CommandBinding x:Name="Close" Command="cmd:RoutedCommands.Cancel" CanExecute="Close_CanExecute" Executed="Close_Executed"/>
     </Page.CommandBindings>
-    <Grid Background="White">
+    <Page.Resources>
+        <ResourceDictionary Source="../TabletStyles.xaml">
+            
+        </ResourceDictionary>
+    </Page.Resources>
+    <Grid Background="{StaticResource SoftGreen}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="5*"/>
             <RowDefinition Height="0.8*"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="1" BorderBrush="DarkBlue" BorderThickness="1" Margin="5,20,5,0">
+        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1" Margin="5,20,5,0">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <ItemsControl x:Name="itemsControlLiveTours" ItemsSource="{Binding tourReviewDTOs}">
                     <ItemsControl.ItemTemplate>
@@ -33,6 +38,6 @@
                 </ItemsControl>
             </ScrollViewer>
         </Border>
-        <Button x:Name="closeButton" Grid.Row="2" Content="Close" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10" Command="cmd:RoutedCommands.Cancel"/>
+        <Button x:Name="closeButton" Grid.Row="2" Content="Close" Style="{StaticResource BigButtons}" Command="cmd:RoutedCommands.Cancel"/>
     </Grid>
 </Page>
