--- a/WPF/Desktop/Views/TouristHomePage.xaml
+++ b/WPF/Desktop/Views/TouristHomePage.xaml
@@ -69,6 +69,7 @@
                                    FontSize="14"/>
                         <TextBox FontSize="24"
                                  x:Name="TouristNumberTextBox"
+                                 Padding="2"
                                  Text="{Binding Filter.TouristNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     </StackPanel>
                     <StackPanel Grid.Column="3"
@@ -77,6 +78,7 @@
                                    FontSize="14"/>
                         <TextBox FontSize="24"
                                  Text="{Binding Filter.Duration, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 Padding="2"
                                  x:Name="DurationTextBox"/>
                     </StackPanel>
                         <StackPanel Orientation="Horizontal"
@@ -95,11 +97,13 @@
                 </Grid>
         </Border>
 
-        <ScrollViewer Grid.Row="1">
+        <ScrollViewer Grid.Row="1"
+                      Margin="0, 0, 5, 0">
             <ItemsControl ItemsSource="{Binding ToursOnDisplay}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Border Style="{StaticResource BorderStyle}">
+                            <Border Style="{StaticResource BorderStyle}"
+                                    Margin="10, 0, 10, 10">
                                 <Grid Margin="5">
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
@@ -121,7 +125,7 @@
                                     <Grid Grid.Column="1"
                                           Grid.Row="1"
                                           VerticalAlignment="Bottom"
-                                          Margin="10, 0">
+                                          Margin="10, 0, 0, 0">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="3*"/>
@@ -197,7 +201,7 @@
                                                     Margin="35, 0, 35, 5">
                                                 <StackPanel>
                                                         <Image Source="{StaticResource BlackAccount}"
-                                                               Margin="5"
+                                                               Margin="5, 5, 5, 0"
                                                                Height="30"/>
                                                         <TextBlock Grid.Row="1"
                                                                HorizontalAlignment="Center"
@@ -218,7 +222,7 @@
                                                     Style="{StaticResource ButtonStyle}"
                                                     Margin="0"
                                                     Content="Book now"
-                                                    Padding="15, 5"/>
+                                                    Padding="10"/>
                                         </StackPanel>
                                     </Grid>
                                 </Grid>
