--- a/WPF/Web/Views/CreateReservationPage.xaml
+++ b/WPF/Web/Views/CreateReservationPage.xaml
@@ -66,19 +66,33 @@
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0" Orientation="Vertical">
-                        <TextBlock x:Name="textBlockName" Text="{Binding Accommodation.Name}" Margin="0 10 0 10"
+                        <TextBlock x:Name="textBlockName" Text="{Binding Accommodation.Name}" Margin="0 10 0 30"
                                    FontWeight="DemiBold" FontSize="20" Width="150" TextWrapping="Wrap" 
                                    HorizontalAlignment="Center" TextAlignment="Center"/>
 
-                        <Border Height="128" Width="128" CornerRadius="10" Margin="0 10 0 10">
-                            <Border.Background>
-                                <ImageBrush ImageSource="{Binding Accommodation.ProfilePictures[0]}" Stretch="Fill"/>
-                            </Border.Background>
-                        </Border>
+                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Button Height="30" Width="30" Margin="0 0 10 0" Background="{StaticResource SoftGreen}">
+                                <WrapPanel>
+                                    <Image Source="{StaticResource LeftArrowIcon}" Style="{StaticResource ButtonImage}"/>
+                                </WrapPanel>
+                            </Button>
+
+                            <Border Height="128" Width="128" CornerRadius="10">
+                                <Border.Background>
+                                    <ImageBrush ImageSource="{Binding Accommodation.ProfilePictures[0]}" Stretch="Fill"/>
+                                </Border.Background>
+                            </Border>
+
+                            <Button Height="30" Width="30" Margin="10 0 0 0" Background="{StaticResource SoftGreen}">
+                                <WrapPanel>
+                                    <Image Source="{StaticResource RightArrowIcon}" Style="{StaticResource ButtonImage}"/>
+                                </WrapPanel>
+                            </Button>
+                        </WrapPanel>
                     </StackPanel>
                 
 
-                    <Grid Grid.Row="1" Margin="0 10 0 0">
+                    <Grid Grid.Row="1" Margin="0 30 0 0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
