--- a/WPF/Web/Views/CreateReservationPage.xaml
+++ b/WPF/Web/Views/CreateReservationPage.xaml
@@ -71,7 +71,7 @@
                                    HorizontalAlignment="Center" TextAlignment="Center"/>
 
                         <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                            <Button Height="30" Width="30" Margin="0 0 10 0" Background="{StaticResource SoftGreen}">
+                            <Button x:Name="buttonLeft" Height="30" Width="30" Margin="0 0 10 0" Background="{StaticResource SoftGreen}" Click="ButtonLeftClick">
                                 <WrapPanel>
                                     <Image Source="{StaticResource LeftArrowIcon}" Style="{StaticResource ButtonImage}"/>
                                 </WrapPanel>
@@ -79,11 +79,11 @@
 
                             <Border Height="128" Width="128" CornerRadius="10">
                                 <Border.Background>
-                                    <ImageBrush ImageSource="{Binding Accommodation.ProfilePictures[0]}" Stretch="Fill"/>
+                                    <ImageBrush ImageSource="{Binding SelectedAccommodationPicture, Mode=OneWay}" Stretch="Fill"/>
                                 </Border.Background>
                             </Border>
 
-                            <Button Height="30" Width="30" Margin="10 0 0 0" Background="{StaticResource SoftGreen}">
+                            <Button x:Name="buttonRight" Height="30" Width="30" Margin="10 0 0 0" Background="{StaticResource SoftGreen}" Click="ButtonRightClick">
                                 <WrapPanel>
                                     <Image Source="{StaticResource RightArrowIcon}" Style="{StaticResource ButtonImage}"/>
                                 </WrapPanel>
