refac: Changed cursor style to hand when hovering over button

--- a/WPF/Web/Views/BookingPage.xaml
+++ b/WPF/Web/Views/BookingPage.xaml
@@ -26,6 +26,7 @@
 
         <Style TargetType="Button">
             <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+            <Setter Property="Cursor" Value="Hand"/>
         </Style>
 
         <Style x:Key="ButtonText" TargetType="TextBlock">
