--- a/WPF/Web/Views/CreateReservationPage.xaml
+++ b/WPF/Web/Views/CreateReservationPage.xaml
@@ -13,6 +13,10 @@
     <Page.Resources>
         <converter:CountToBooleanConverter x:Key="CountToBooleanConverter"/>
 
+        <Style TargetType="Button">
+            <Setter Property="Cursor" Value="Hand"/>
+        </Style>
+        
         <Style TargetType="Image">
             <Setter Property="Height" Value="16"/>
             <Setter Property="Width" Value="16"/>
