--- a/WPF/Web/Views/GuestMainWindow.xaml
+++ b/WPF/Web/Views/GuestMainWindow.xaml
@@ -12,6 +12,10 @@
     <Window.Resources>
         <converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
+        <Style TargetType="Button">
+            
+        </Style>
+        
         <Style x:Key="ButtonImage" TargetType="Image">
             <Setter Property="Height" Value="20"/>
             <Setter Property="Width" Value="20"/>
@@ -26,6 +30,7 @@
             <Setter Property="VerticalAlignment" Value="Bottom"/>
             <Setter Property="Height" Value="40"/>
             <Setter Property="Width" Value="150"/>
+            <Setter Property="Cursor" Value="Hand"/>
         </Style>
 
         <Style x:Key="SecondaryButton" TargetType="Button">
@@ -34,6 +39,7 @@
             <Setter Property="VerticalAlignment" Value="Top"/>
             <Setter Property="Width" Value="90"/>
             <Setter Property="Height" Value="30"/>
+            <Setter Property="Cursor" Value="Hand"/>
         </Style>
 
         <Style x:Key="ButtonText" TargetType="TextBlock">
